# confcli

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TESTING.md  TODO.md  install.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
scripts/: extract_changelog.py
skill/: SKILL.md
src/: auth.rs  cli.rs  client.rs  config.rs  context.rs  download.rs  helpers.rs  json_util.rs  lib.rs  main.rs  markdown.rs  output.rs  pagination.rs  pattern.rs  resolve.rs  tree.rs
src/cli/: attachment.rs  auth.rs  comment.rs  common.rs  copy_tree.rs  export.rs  label.rs  mod.rs  page.rs  search.rs  space.rs
src/commands/: attachment.rs  auth.rs  comment.rs  copy_tree.rs  export.rs  label.rs  mod.rs  page.rs  search.rs  space.rs
src/commands/page/: listing.rs  mod.rs  navigation.rs  write_ops.rs
src/test_support/: http_server.rs
tests/: cli.rs
