[package]
name = "confcli"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.56", features = ["derive", "env"] }
clap_complete = "4.5.65"
comfy-table = "7.2.2"
dialoguer = "0.12.0"
dotenvy = "0.15.7"
dirs = "6.0.0"
http = "1.4.0"
indicatif = "0.18.3"
htmd = "0.5.0"
humansize = "2.1.3"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json", "multipart", "gzip", "brotli", "deflate", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
futures-util = "0.3.31"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "fs", "io-std"] }
tokio-util = { version = "0.7", features = ["io"] }
pulldown-cmark = "0.13.0"
url = "2.5.8"
urlencoding = "2.1.3"

[features]
default = ["write"]
write = []

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.24.0"
